Fix form button spacing Vanilla override.

--- a/ui/src/scss/_vanilla-overrides.scss
+++ b/ui/src/scss/_vanilla-overrides.scss
@@ -6,9 +6,6 @@
 
 // 19-08-2019 Caleb: Form submit button too close to input when $multi = 1
 // https://github.com/canonical-web-and-design/vanilla-framework/issues/2497
-.p-form__control:last-of-type {
-  margin-bottom: $spv-outer--small;
-}
 .p-form__group:last-of-type {
   margin-bottom: $spv-outer--medium;
 }
